--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
-    "jss": "^10.0.4",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-redux": "^7.2.0",
     "react-scripts": "3.4.0",
+    "redux": "^4.0.5",
     "typescript": "^3.8.3"
   },
   "scripts": {
@@ -37,6 +38,7 @@
     ]
   },
   "devDependencies": {
-    "react-test-renderer": "^16.13.0"
+    "@types/react-router-dom": "^5.1.3",
+    "react-router-dom": "^5.1.2"
   }
 }
