--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     ]
   },
   "devDependencies": {
+    "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "redux-thunk": "^2.3.0"
   }
 }
