--- a/package.json
+++ b/package.json
@@ -38,9 +38,12 @@
     ]
   },
   "devDependencies": {
+    "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
     "react-router-dom": "^5.1.2",
-    "redux-thunk": "^2.3.0"
+    "react-toastify": "^5.5.0",
+    "redux-saga": "^1.1.3"
   }
 }
