--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/react-loader-spinner": "^3.1.0",
     "axios": "^0.19.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
@@ -40,6 +41,7 @@
   "devDependencies": {
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
+    "react-loader-spinner": "^3.1.5",
     "react-router-dom": "^5.1.2",
     "react-toastify": "^5.5.0",
     "redux-saga": "^1.1.3"
