--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "devDependencies": {
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
+    "node-sass": "^4.13.1",
     "react-loader-spinner": "^3.1.5",
     "react-router-dom": "^5.1.2",
     "react-toastify": "^5.5.0",
