--- a/package.json
+++ b/package.json
@@ -19,7 +19,18 @@
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@types/enzyme": "^3.10.5",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@types/jest": "^25.1.4",
+    "@types/react-redux": "^7.1.7",
+    "@types/react-router-dom": "^5.1.3",
+    "node-sass": "^4.13.1",
+    "react-loader-spinner": "^3.1.5",
+    "react-router-dom": "^5.1.2",
+    "react-toastify": "^5.5.0",
+    "redux-saga": "^1.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,16 +54,5 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@types/enzyme": "^3.10.5",
-    "@types/enzyme-adapter-react-16": "^1.0.6",
-    "@types/jest": "^25.1.4",
-    "@types/react-redux": "^7.1.7",
-    "@types/react-router-dom": "^5.1.3",
-    "node-sass": "^4.13.1",
-    "react-loader-spinner": "^3.1.5",
-    "react-router-dom": "^5.1.2",
-    "react-toastify": "^5.5.0",
-    "redux-saga": "^1.1.3"
   }
 }
